added categories endpoints
