# XYZ/Endpoints/Requests/CategoryRequest.cs
@@ -1,0 +1,7 @@
+﻿namespace XYZ.Endpoints.Requests
+{
+    public class CategoryRequest
+    {
+        public string name {  get; init; }
+    }
+}
